feat(users, menu, category): enhance endpoints and improve functionality
