# src/modules/category/category.route.ts
@@ -3,24 +3,31 @@ import { Router } from 'express';
 import {
   createCategory,
   deleteCategory,
+  getCategoriesList,
+  getCategoryById,
   listCategories,
   updateCategory,
 } from './category.controller';
-import { createCategorySchema } from './category.validator';
+import { createCategorySchema, updateCategorySchema } from './category.validator';
 
 import authenticate from '@/middleware/authenticate.middleware';
 import authorize from '@/middleware/authorize.middleware';
-import validate from '@/middleware/zod-validate.middleware';
+import ZodValidate from '@/middleware/zod-validate.middleware';
+import basePaginationSchema from '@/validations/pagination.validation';
 
-const router = Router({ mergeParams: true });
+const router = Router();
 
-router.get('/', listCategories);
+router.get('/', ZodValidate(basePaginationSchema, 'query'), listCategories);
+
+router.get('/list', getCategoriesList);
+
+router.get('/:categoryId', getCategoryById);
 
 router.post(
   '/',
   authenticate,
   authorize('OWNER', 'ADMIN'),
-  validate(createCategorySchema),
+  ZodValidate(createCategorySchema),
   createCategory
 );
 
@@ -28,7 +35,7 @@ router.patch(
   '/:categoryId',
   authenticate,
   authorize('OWNER', 'ADMIN'),
-  validate(createCategorySchema),
+  ZodValidate(updateCategorySchema),
   updateCategory
 );
 
