# src/modules/menu/menu.validator.ts
@@ -1,13 +1,0 @@
-import { z } from 'zod';
-
-const createMenuItemSchema = z.object({
-  name: z.string().min(2),
-  description: z.string().optional(),
-  price: z.number().min(0.01),
-  available: z.boolean().optional(),
-  categoryId: z.string().optional(),
-});
-
-const updateMenuItemSchema = createMenuItemSchema.partial();
-
-export { createMenuItemSchema, updateMenuItemSchema };
